--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Saad Pasta Portfolio",
-  "name": "Saad Pasta Portfolio",
+  "short_name": "Rasul Rukh Portfolio",
+  "name": "Rasul Rukh Portfolio",
   "icons": [
     {
       "src": "/favicon.ico",
